adding class 1 module

--- a/learn.html
+++ b/learn.html
@@ -805,11 +805,11 @@
     <div class="mb-5">
     
     <h3 class="text-center text-primary mb-4" id="youtube-gallery">
-      🎥 Gallery of YouTube Videos & Shorts
+      🎥 Gallery of GenEd AI
     </h3>
   
     <!-- Full-Length Videos Section -->
-    <h4 class="mb-3" style="color: #408fd4;">Full-Length Videos</h4>
+    <!-- <h4 class="mb-3" style="color: #408fd4;">Full-Length Videos</h4> -->
     <div class="row g-4">
 
 <!-- 
@@ -952,6 +952,238 @@
       </div> -->
 
 
+      <h1>Class 1: Module</h1>
+
+
+
+      <!-- gened ai starting -->
+       <!-- Video 1 -->
+<div class="col-md-4 col-sm-6">
+  <div class="card shadow-sm border-0">
+    <div class="position-relative">
+      <img
+        src="https://i9.ytimg.com/vi_webp/NpyA1-D-fXc/mq2.webp?sqp=COiw-MQG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgSyg5MA8=&rs=AOn4CLBDYNFFUNGKEbP9zwcKTHQWZ8y3iw"
+        alt="Chapter 1 Meet Our Smart Friends! - GenEd AI"
+        class="card-img-top img-fluid rounded"
+      />
+      <a
+        href="https://www.youtube.com/watch?v=NpyA1-D-fXc"
+        target="_blank"
+        class="btn btn-primary position-absolute top-50 start-50 translate-middle rounded-circle play-icon"
+        aria-label="Play video Chapter 1 Meet Our Smart Friends!"
+      >
+        <i class="fas fa-play"></i>
+      </a>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Chapter 1 Meet Our Smart Friends!</h5>
+      <p class="card-text text-muted">
+        Learn about our smart friends and AI basics.
+      </p>
+      <span class="badge bg-success">Full Video</span>
+    </div>
+  </div>
+</div>
+
+<!-- Video 2 -->
+<div class="col-md-4 col-sm-6">
+  <div class="card shadow-sm border-0">
+    <div class="position-relative">
+      <img
+        src="https://i9.ytimg.com/vi_webp/Wgau_fprAes/mq2.webp?sqp=CJSz-MQG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgUCguMA8=&rs=AOn4CLDR4JI6--SK70RVg84SS-1dc3PswA"
+        alt="Chapter 2 How Friends Learn & Grow! - GenEd AI"
+        class="card-img-top img-fluid rounded"
+      />
+      <a
+        href="https://youtu.be/Wgau_fprAes"
+        target="_blank"
+        class="btn btn-primary position-absolute top-50 start-50 translate-middle rounded-circle play-icon"
+        aria-label="Play video Chapter 2 How Friends Learn & Grow!"
+      >
+        <i class="fas fa-play"></i>
+      </a>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Chapter 2 How Friends Learn & Grow!</h5>
+      <p class="card-text text-muted">
+        Explore how AI learns and grows over time.
+      </p>
+      <span class="badge bg-success">Full Video</span>
+    </div>
+  </div>
+</div>
+
+<!-- Video 3 -->
+<div class="col-md-4 col-sm-6">
+  <div class="card shadow-sm border-0">
+    <div class="position-relative">
+      <img
+        src="https://i9.ytimg.com/vi_webp/1ybrgx6XQtI/mq2.webp?sqp=CJSz-MQG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGH8gQygwMA8=&rs=AOn4CLBgJUogVTp25-wQpiXSr3OMzKmLmQ"
+        alt="Chapter 3 AI’s Superpower Finding Patterns - GenED AI"
+        class="card-img-top img-fluid rounded"
+      />
+      <a
+        href="https://youtu.be/1ybrgx6XQtI"
+        target="_blank"
+        class="btn btn-primary position-absolute top-50 start-50 translate-middle rounded-circle play-icon"
+        aria-label="Play video Chapter 3 AI’s Superpower Finding Patterns"
+      >
+        <i class="fas fa-play"></i>
+      </a>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Chapter 3 AI’s Superpower Patterns</h5>
+      <p class="card-text text-muted">
+        Discover how AI identifies patterns and insights.
+      </p>
+      <span class="badge bg-success">Full Video</span>
+    </div>
+  </div>
+</div>
+
+<!-- Video 4 -->
+<div class="col-md-4 col-sm-6">
+  <div class="card shadow-sm border-0">
+    <div class="position-relative">
+      <img
+        src="https://i9.ytimg.com/vi_webp/57ZMynmbtPU/mq2.webp?sqp=CJSz-MQG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGGUgUShAMA8=&rs=AOn4CLAwWAS6xaIP524W-xO8-uuiqngFQg"
+        alt="Chapter 4 AI All Around Us! - GenEd AI"
+        class="card-img-top img-fluid rounded"
+      />
+      <a
+        href="https://youtu.be/57ZMynmbtPU"
+        target="_blank"
+        class="btn btn-primary position-absolute top-50 start-50 translate-middle rounded-circle play-icon"
+        aria-label="Play video Chapter 4 AI All Around Us!"
+      >
+        <i class="fas fa-play"></i>
+      </a>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Chapter 4 AI All Around Us!</h5>
+      <p class="card-text text-muted">
+        See how AI is integrated in our everyday lives.
+      </p>
+      <span class="badge bg-success">Full Video</span>
+    </div>
+  </div>
+</div>
+
+<!-- Video 5 -->
+<div class="col-md-4 col-sm-6">
+  <div class="card shadow-sm border-0">
+    <div class="position-relative">
+      <img
+        src="https://i9.ytimg.com/vi_webp/0q-dOnGoS_s/mq2.webp?sqp=CJSz-MQG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGD8gWChlMA8=&rs=AOn4CLBf4K7OGT3-FzTL67XiZwLCVGjJqg"
+        alt="Chapter 5 How AI Gets Its Info! - GenEd AI"
+        class="card-img-top img-fluid rounded"
+      />
+      <a
+        href="https://youtu.be/0q-dOnGoS_s"
+        target="_blank"
+        class="btn btn-primary position-absolute top-50 start-50 translate-middle rounded-circle play-icon"
+        aria-label="Play video Chapter 5 How AI Gets Its Info!"
+      >
+        <i class="fas fa-play"></i>
+      </a>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Chapter 5 How AI Gets Its Info!</h5>
+      <p class="card-text text-muted">
+        Learn where AI collects information from.
+      </p>
+      <span class="badge bg-success">Full Video</span>
+    </div>
+  </div>
+</div>
+
+<!-- Video 6 -->
+<div class="col-md-4 col-sm-6">
+  <div class="card shadow-sm border-0">
+    <div class="position-relative">
+      <img
+        src="https://i9.ytimg.com/vi_webp/Nt3Nc0vEueI/mq2.webp?sqp=CJSz-MQG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgRChBMA8=&rs=AOn4CLD7pJ6sgT1xpWFdIggny4IgWJLTVQ"
+        alt="Chapter 6 AI’s Eyes & Ears! - GenEd AI"
+        class="card-img-top img-fluid rounded"
+      />
+      <a
+        href="https://youtu.be/Nt3Nc0vEueI"
+        target="_blank"
+        class="btn btn-primary position-absolute top-50 start-50 translate-middle rounded-circle play-icon"
+        aria-label="Play video Chapter 6 AI’s Eyes & Ears!"
+      >
+        <i class="fas fa-play"></i>
+      </a>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Chapter 6 AI’s Eyes & Ears!</h5>
+      <p class="card-text text-muted">
+        Understand how AI sees and listens to the world.
+      </p>
+      <span class="badge bg-success">Full Video</span>
+    </div>
+  </div>
+</div>
+
+<!-- Video 7 -->
+<div class="col-md-4 col-sm-6">
+  <div class="card shadow-sm border-0">
+    <div class="position-relative">
+      <img
+        src="https://i9.ytimg.com/vi/S5BHdUJ87KM/mq2.jpg?sqp=COiw-MQG-oaymwEmCMACELQB8quKqQMa8AEB-AHUBoAC4AOKAgwIABABGH8gQygjMA8=&rs=AOn4CLD9cNEv-PhCayULHGbMSwePJPEqOA"
+        alt="Chapter 7 AI Can Be Creative Too! - GenEd AI"
+        class="card-img-top img-fluid rounded"
+      />
+      <a
+        href="https://youtu.be/S5BHdUJ87KM"
+        target="_blank"
+        class="btn btn-primary position-absolute top-50 start-50 translate-middle rounded-circle play-icon"
+        aria-label="Play video Chapter 7 AI Can Be Creative Too!"
+      >
+        <i class="fas fa-play"></i>
+      </a>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Chapter 7 AI Can Be Creative Too!</h5>
+      <p class="card-text text-muted">
+        Explore AI's creative abilities in arts and design.
+      </p>
+      <span class="badge bg-success">Full Video</span>
+    </div>
+  </div>
+</div>
+
+<!-- Video 8 -->
+<div class="col-md-4 col-sm-6">
+  <div class="card shadow-sm border-0">
+    <div class="position-relative">
+      <img
+        src="https://i9.ytimg.com/vi_webp/T_PNOWzqsfQ/mq2.webp?sqp=CJSz-MQG-oaymwEmCMACELQB8quKqQMa8AEB-AH-CYAC0AWKAgwIABABGHIgSigtMA8=&rs=AOn4CLD0-R7cqa7fCjUCRpZwDNd7NYBj6w"
+        alt="Chapter 8 Being Smart, Safe & an AI Builder! - GenEd AI"
+        class="card-img-top img-fluid rounded"
+      />
+      <a
+        href="https://youtu.be/T_PNOWzqsfQ"
+        target="_blank"
+        class="btn btn-primary position-absolute top-50 start-50 translate-middle rounded-circle play-icon"
+        aria-label="Play video Chapter 8 Being Smart, Safe & an AI Builder!"
+      >
+        <i class="fas fa-play"></i>
+      </a>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Chapter 8 Being Smart, Safe with AI</h5>
+      <p class="card-text text-muted">
+        Tips for safe and smart AI usage of AI.
+      </p>
+      <span class="badge bg-success">Full Video</span>
+    </div>
+  </div>
+</div>
+
+      <!-- gened ai ending -->
+
+
 
 
 
@@ -983,31 +1215,38 @@
         </div>
       </div> -->
 
-      <!-- Video 1 -->
-<div class="col-md-4 col-sm-6">
-  <div class="card shadow-sm border-0">
-    <div class="position-relative">
-      <iframe
-        src="https://drive.google.com/file/d/1tckTJ9Cdl2K54m64t_Z-x-m1tQZjlOLY/preview"
-        width="100%"
-        height="200"
-        class="card-img-top rounded"
-        allow="autoplay"
-      ></iframe>
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">Install Bolt.DIY Locally on Windows</h5>
-      <p class="card-text text-muted">
-        Learn to integrate LLMs like DeepSeek, OpenAI, Hugging Face & More.
-      </p>
-      <span class="badge bg-success">Full Video</span>
-    </div>
-  </div>
-</div>
 
-  
+      <!-- <div class="col-md-4 col-sm-6">
+        <div class="card shadow-sm border-0">
+          <div class="position-relative">
+            <img
+              src="https://img.youtube.com/vi/5AJchjvlkFM/mqdefault.jpg"
+              alt="Install Bolt.DIY Locally on Windows | Integrate LLMs: DeepSeek, OpenAI, Hugging Face & More"
+              class="card-img-top img-fluid rounded"
+            />
+            <a
+              href="https://youtu.be/5AJchjvlkFM"
+              target="_blank"
+              class="btn btn-primary position-absolute top-50 start-50 translate-middle rounded-circle play-icon"
+              aria-label="Play video Install Bolt.DIY Locally on Windows"
+            >
+              <i class="fas fa-play"></i>
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Install Bolt.DIY Locally on Windows</h5>
+            <p class="card-text text-muted">
+              Learn to integrate LLMs like DeepSeek, OpenAI, Hugging Face & More.
+            </p>
+            <span class="badge bg-success">Full Video</span>
+          </div>
+        </div>
+      </div> -->
+
+      <!-- Video 1 -->
+
       <!-- Video 2 -->
-      <div class="col-md-4 col-sm-6">
+      <!-- <div class="col-md-4 col-sm-6">
         <div class="card shadow-sm border-0">
           <div class="position-relative">
             <img
@@ -1030,10 +1269,10 @@
             <span class="badge bg-success">Full Video</span>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- Video Card 3 -->
-<div class="col-md-4 col-sm-6">
+<!-- <div class="col-md-4 col-sm-6">
     <div class="card shadow-sm border-0">
       <div class="position-relative">
         <img
@@ -1056,10 +1295,10 @@
         <span class="badge bg-success">Full Video</span>
       </div>
     </div>
-  </div>
+  </div> -->
   
   <!-- Video Card 4 -->
-  <div class="col-md-4 col-sm-6">
+  <!-- <div class="col-md-4 col-sm-6">
     <div class="card shadow-sm border-0">
       <div class="position-relative">
         <img
@@ -1082,10 +1321,10 @@
         <span class="badge bg-success">Full Video</span>
       </div>
     </div>
-  </div>
+  </div> -->
   
   <!-- Video Card 5 -->
-  <div class="col-md-4 col-sm-6">
+  <!-- <div class="col-md-4 col-sm-6">
     <div class="card shadow-sm border-0">
       <div class="position-relative">
         <img
@@ -1108,10 +1347,10 @@
         <span class="badge bg-success">Full Video</span>
       </div>
     </div>
-  </div>
+  </div> -->
   
   <!-- Video Card 6 -->
-  <div class="col-md-4 col-sm-6">
+  <!-- <div class="col-md-4 col-sm-6">
     <div class="card shadow-sm border-0">
       <div class="position-relative">
         <img
@@ -1135,9 +1374,9 @@
       </div>
     </div>
   </div>
-  
+   -->
   <!-- Video Card 7 -->
-  <div class="col-md-4 col-sm-6">
+  <!-- <div class="col-md-4 col-sm-6">
     <div class="card shadow-sm border-0">
       <div class="position-relative">
         <img
@@ -1160,7 +1399,7 @@
         <span class="badge bg-success">Full Video</span>
       </div>
     </div>
-  </div>
+  </div> -->
   
   
       <!-- Repeat for other full-length videos -->
