adding blog section over here

--- a/index.html
+++ b/index.html
@@ -557,12 +557,13 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <!-- Align all items to the right including "Get a Quote" button -->
             <div class="navbar-nav ms-auto align-items-center">
-              <a href="#home" class="nav-item nav-link active">HOME</a>
-              <a href="#about" class="nav-item nav-link">ABOUT</a>
-              <a href="#service" class="nav-item nav-link">SERVICES</a>
-              <a href="learn.html" class="nav-item nav-link">LEARN</a>
+              <a href="#home" class="nav-item nav-link active">Home</a>
+              <a href="#about" class="nav-item nav-link">About</a>
+              <a href="#service" class="nav-item nav-link">Services</a>
+              <a href="blogs.html" class="nav-item nav-link">Blogs</a>
+              <a href="learn.html" class="nav-item nav-link">Learn</a>
               <!-- <a href="carrer.html" class="nav-item nav-link">Careers</a> -->
-              <a href="#contact" class="nav-item nav-link">CONTACT</a>
+              <a href="#contact" class="nav-item nav-link">Contact</a>
               <!-- Get a Quote Button -->
               <div class="nav-btn px-3">
                 <a
@@ -1937,8 +1938,8 @@ style="background-color: #408fd4"
                   </div>
                   <div>
                     <h4 class="mb-1">Mail Us</h4>
-                    <!-- <p class="mb-0">officialneuronix.ai@gmail.com
-</p> -->
+                    <p class="mb-0">officialneuronix.ai@gmail.com
+</p>
                   </div>
                 </div>
               </div>
@@ -1949,7 +1950,7 @@ style="background-color: #408fd4"
                   </div>
                   <div>
                     <h4 class="mb-1">Telephone</h4>
-                    <p class="mb-0">+91 821510xxxx</p>
+                    <p class="mb-0">+9</p>
                   </div>
                 </div>
               </div>
@@ -2192,8 +2193,8 @@ style="background-color: #408fd4"
               </div>
               <div>
                 <h4 class="text-white">Mail Us</h4>
-                <!-- <p class="text-white-50 mb-0">officialneuronix.ai@gmail.com
-</p> -->
+                <p class="text-white-50 mb-0">officialneuronix.ai@gmail.com
+</p>
               </div>
             </div>
           </div>
@@ -2203,12 +2204,12 @@ style="background-color: #408fd4"
               <div
                 class="btn-xl-square bg-primary text-white rounded-circle p-4 me-3"
               >
-                <i class="fas fa-phone-alt fa-2x"></i>
+                <!-- <i class="fas fa-phone-alt fa-2x"></i> -->
               </div>
-              <div>
+              <!-- <div>
                 <h4 class="text-white">Telephone</h4>
                 <p class="text-white-50 mb-0">+91 844221xxxx1</p>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
