--- a/FAQ.html
+++ b/FAQ.html
@@ -379,12 +379,12 @@
                                 <div class="col-lg-6 col-xl-4">
                                     <div class="d-flex">
                                         <div class="btn-xl-square bg-primary text-white rounded p-4 me-4">
-                                            <i class="fa fa-phone-alt fa-2x"></i>
+                                            <!-- <i class="fa fa-phone-alt fa-2x"></i> -->
                                         </div>
-                                        <div>
+                                        <!-- <div>
                                             <h4 class="text-white">Telephone</h4>
                                             <p class="mb-0">+91 8275563954</p>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
