--- a/service.html
+++ b/service.html
@@ -293,7 +293,10 @@
                                     <a href="index.html" class="nav-item nav-link">Home</a>
                                     <a href="about.html" class="nav-item nav-link">About</a>
                                     <a href="service.html" class="nav-item nav-link active">Services</a>
-                                    <a href="carrer.html" class="nav-item nav-link">Careers</a>
+                                    <!-- <a href="carrer.html" class="nav-item nav-link">Careers</a>
+                                      -->
+                                    <a href="blogs.html" class="nav-item nav-link">Blogs</a>
+
                                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                                     <!-- Get a Quote Button -->
                         <div class="nav-btn px-3">
@@ -667,12 +670,12 @@
                                     <div class="col-lg-6 col-xl-4">
                                         <div class="d-flex">
                                             <div class="btn-xl-square bg-primary text-white rounded p-4 me-4">
-                                                <i class="fa fa-phone-alt fa-2x"></i>
+                                                <!-- <i class="fa fa-phone-alt fa-2x"></i> -->
                                             </div>
-                                            <div>
+                                            <!-- <div>
                                                 <h4 class="text-white">Telephone</h4>
                                                 <p class="mb-0">+91 8275563954</p>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
