--- a/testimonial.html
+++ b/testimonial.html
@@ -99,6 +99,8 @@
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
                             <a href="carrer.html" class="nav-item nav-link">Blog</a>
+
+
                             <div class="nav-item dropdown active">
                                 <a href="#" class="nav-link" data-bs-toggle="dropdown">
                                     <span class="dropdown-toggle">Pages</span>
@@ -406,12 +408,12 @@
                                 <div class="col-lg-6 col-xl-4">
                                     <div class="d-flex">
                                         <div class="btn-xl-square bg-primary text-white rounded p-4 me-4">
-                                            <i class="fa fa-phone-alt fa-2x"></i>
+                                            <!-- <i class="fa fa-phone-alt fa-2x"></i> -->
                                         </div>
-                                        <div>
+                                        <!-- <div>
                                             <h4 class="text-white">Telephone</h4>
                                             <p class="mb-0">+91 8275563954</p>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -431,7 +433,7 @@
     <div class="container">
         <div class="row g-4 align-items-center">
             <center>
-                <span class="text-body"><a href="#" class="text-white">© 2024 https://www.pixonate.in</a>. <span class="text-white">All rights reserved.</span></span>
+                <span class="text-body"><a href="#" class="text-white">© 2024 https://www.ineuronix.tech</a>. <span class="text-white">All rights reserved.</span></span>
             </center>
 
         </div>
