adding my blog over here

--- a/blogs.html
+++ b/blogs.html
@@ -800,6 +800,18 @@ footer {
     <!-- blogs section starts -->
     <div class="container my-5">
   <div class="row g-4">
+
+
+     <div class="col-md-4 col-sm-6">
+        <div class="card h-100 shadow-sm border-0">
+          <img src="https://media.licdn.com/dms/image/v2/D5612AQEvs1aFcb2CYg/article-cover_image-shrink_720_1280/B56ZYkNZMLGUAM-/0/1744364222179?e=1761177600&v=beta&t=8zqnPUWdZDR7qbLn2qKdkBcmRbIKx-cOhtlb6EM55c0" class="card-img-top" alt="Getting Started with GenAI">
+          <div class="card-body">
+            <h5 class="card-title">Build Smarter AI Apps with MCP + Composio</h5>
+            <p class="card-text">One Protocol, 100+ Tools, Zero Headaches! A Developer's Guide</p>
+            <a href="https://www.linkedin.com/pulse/build-smarter-ai-apps-mcp-composio-one-protocol-100-tools-singh-hae6c/?trackingId=kD%2FmbjnGQ5mjNnYs5a5J%2BA%3D%3D" target="_blank" class="btn btn-primary btn-sm">Read More</a>
+          </div>
+        </div>
+      </div>
     <!-- Blog 1 -->
     <div class="col-md-4 col-sm-6">
       <div class="card h-100 shadow-sm border-0">
@@ -871,6 +883,21 @@ footer {
         </div>
       </div>
     </div>
+   
+  </div>
+
+
+
+
+
+
+
+
+</div>
+
+
+    <!-- Blog 6 -->
+    
   </div>
 </div>
 
