--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
               <a href="#home" class="nav-item nav-link active">Home</a>
               <a href="#about" class="nav-item nav-link">About</a>
               <a href="#service" class="nav-item nav-link">Services</a>
-              <a href="blogs.html" class="nav-item nav-link">Blogs</a>
+              <!-- <a href="blogs.html" class="nav-item nav-link">Blogs</a> -->
               <a href="learn.html" class="nav-item nav-link">Learn</a>
               <!-- <a href="carrer.html" class="nav-item nav-link">Careers</a> -->
               <a href="#contact" class="nav-item nav-link">Contact</a>
