--- a/learn.html
+++ b/learn.html
@@ -690,7 +690,7 @@
               <a href="index.html" class="nav-item nav-link">About</a>
               <a href="index.html" class="nav-item nav-link">Services</a>
               <a href="learn.html" class="nav-item nav-link">Learn</a>
-                            <a href="carrer.html" class="nav-item nav-link">Blog</a>
+                            <!-- <a href="carrer.html" class="nav-item nav-link">Blog</a> -->
 
               <!-- <a href="carrer.html" class="nav-item nav-link">Careers</a> -->
               <a href="index.html" class="nav-item nav-link">Contact</a>
