--- a/service.html
+++ b/service.html
@@ -295,7 +295,7 @@
                                     <a href="service.html" class="nav-item nav-link active">Services</a>
                                     <!-- <a href="carrer.html" class="nav-item nav-link">Careers</a>
                                       -->
-                                    <a href="blogs.html" class="nav-item nav-link">Blogs</a>
+                                    <!-- <a href="blogs.html" class="nav-item nav-link">Blogs</a> -->
 
                                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                                     <!-- Get a Quote Button -->
