--- a/team.html
+++ b/team.html
@@ -98,7 +98,7 @@
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
-                            <a href="blogs.html" class="nav-item nav-link">Blogs</a>
+                            <!-- <a href="blogs.html" class="nav-item nav-link">Blogs</a> -->
 
                             <div class="nav-item dropdown active">
                                 <a href="#" class="nav-link" data-bs-toggle="dropdown">
