--- a/testimonial.html
+++ b/testimonial.html
@@ -98,7 +98,7 @@
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
-                            <a href="carrer.html" class="nav-item nav-link">Blog</a>
+                            <!-- <a href="carrer.html" class="nav-item nav-link">Blog</a> -->
 
 
                             <div class="nav-item dropdown active">
